syntax = "proto3";

package fleetd.v1;

option go_package = "fleetd.sh/gen/fleetd/v1;fleetpb";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

service AnalyticsService {
  // Get device metrics aggregation
  rpc GetDeviceMetrics(GetDeviceMetricsRequest) returns (GetDeviceMetricsResponse) {
    option (google.api.http) = {
      get: "/api/v1/analytics/devices/{device_id}/metrics"
    };
  }

  // Get update campaign analytics
  rpc GetUpdateAnalytics(GetUpdateAnalyticsRequest) returns (GetUpdateAnalyticsResponse) {
    option (google.api.http) = {
      get: "/api/v1/analytics/updates/{campaign_id}"
    };
  }

  // Get device health metrics
  rpc GetDeviceHealth(GetDeviceHealthRequest) returns (GetDeviceHealthResponse) {
    option (google.api.http) = {
      get: "/api/v1/analytics/devices/{device_id}/health"
    };
  }

  // Get performance metrics
  rpc GetPerformanceMetrics(GetPerformanceMetricsRequest) returns (GetPerformanceMetricsResponse) {
    option (google.api.http) = {
      get: "/api/v1/analytics/performance"
    };
  }
}

message TimeRange {
  google.protobuf.Timestamp start_time = 1;
  google.protobuf.Timestamp end_time = 2;
}

message MetricValue {
  oneof value {
    double numeric = 1;
    string text = 2;
  }
  google.protobuf.Timestamp timestamp = 3;
}

message MetricSeries {
  string name = 1;
  repeated MetricValue values = 2;
}

message GetDeviceMetricsRequest {
  string device_id = 1;
  repeated string metric_names = 2;
  TimeRange time_range = 3;
}

message GetDeviceMetricsResponse {
  repeated MetricSeries metrics = 1;
}

message UpdateMetrics {
  string campaign_id = 1;
  string name = 2;
  int32 total_devices = 3;
  int32 successful_updates = 4;
  int32 failed_updates = 5;
  double success_rate = 6;
  double average_duration_seconds = 7;
  repeated string common_failure_reasons = 8;
}

message GetUpdateAnalyticsRequest {
  TimeRange time_range = 1;
  string campaign_id = 2;
}

message GetUpdateAnalyticsResponse {
  repeated UpdateMetrics campaigns = 1;
  double overall_success_rate = 2;
  double average_completion_time = 3;
  map<string, int32> failures_by_reason = 4;
}

message DeviceHealthStatus {
  string device_id = 1;
  string status = 2; // healthy, warning, critical
  double health_score = 3;
  map<string, string> health_metrics = 4;
  repeated string warnings = 5;
  google.protobuf.Timestamp last_check = 6;
}

message GetDeviceHealthRequest {
  string device_id = 1;
  TimeRange time_range = 2;
}

message GetDeviceHealthResponse {
  DeviceHealthStatus current_status = 1;
  repeated DeviceHealthStatus historical_status = 2;
}

message PerformanceMetric {
  string name = 1;
  double value = 2;
  string unit = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message GetPerformanceMetricsRequest {
  repeated string metric_names = 1;
  TimeRange time_range = 2;
}

message GetPerformanceMetricsResponse {
  repeated PerformanceMetric metrics = 1;
  map<string, double> aggregated_metrics = 2;
} 